--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo ...
-configuracion.autor.nombre=Edwin Maravi
-configuracion.autor.email=emaravi@cjavaperu.com
+configuracion.autor.nombre=Isaac Aguirre
+configuracion.autor.email=isaacac19@gmail.com
