--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -1,4 +1,8 @@
-server.port=8006
-configuracion.texto=Configurando entorno Desarrollo ...
-configuracion.autor.nombre=Isaac Aguirre
-configuracion.autor.email=isaacac19@gmail.com
+spring.datasource.url=jdbc:mysql://microservicios-mysql8:3306/cjavaexpert?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=cjavaperu
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create
+
+logging.level.org.hibernate.SQL=debug
